clean(pom): useless dependencies removed